# magpie

./: .gitignore  LICENSE  README.md  pyproject.toml
